# SE-video-clustering

./: .gitignore  README.md  cluster_videos.py  dockerfile  main.py  pyproject.toml  run_container.sh
scripts/: cluster_videos.py  dataset_downloader.py  deepaction_dataset_downloader.py  wan_2_1_dataset_download.py
scripts/dataset_generators/: deepaction.py  k400.py  wanimate2_1.py
scripts/media_processes/: media_processes.py  video_processes_pipeline.py
